[gd_scene load_steps=6 format=3 uid="uid://ds3c5e6utkntm"]

[ext_resource type="Theme" uid="uid://whrxg447a0wk" path="res://Assets/UI/Themes/Infested_UI_Theme.tres" id="1_7nd1g"]
[ext_resource type="Script" path="res://UI/Scripts/PauseMenu.gd" id="2_30qwv"]
[ext_resource type="PackedScene" uid="uid://c45ieop2ocayq" path="res://UI/Menus/Options.tscn" id="3_iarrv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5o0yi"]
bg_color = Color(0, 0, 0, 0.313726)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_16uq2"]

[node name="PauseLayer" type="CanvasLayer"]
process_mode = 3
layer = 2

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7nd1g")
script = ExtResource("2_30qwv")

[node name="Background" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5o0yi")

[node name="Menus" type="Control" parent="PauseMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="PanelContainer" parent="PauseMenu/Menus"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -176.5
offset_right = 185.5
offset_bottom = 176.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_16uq2")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Menus/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Menus/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LabelPaused" type="Label" parent="PauseMenu/Menus/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="PauseMenu/Menus/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="btnContinue" type="Button" parent="PauseMenu/Menus/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="btnOptions" type="Button" parent="PauseMenu/Menus/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="btnBackToMenu" type="Button" parent="PauseMenu/Menus/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Return to Menu"

[node name="Options" parent="PauseMenu/Menus" instance=ExtResource("3_iarrv")]
layout_mode = 1

[connection signal="visibility_changed" from="." to="PauseMenu" method="_on_pause_layer_visibility_changed"]
[connection signal="pressed" from="PauseMenu/Menus/MainMenu/MarginContainer/VBoxContainer/btnContinue" to="PauseMenu" method="_on_btn_continue_pressed"]
[connection signal="pressed" from="PauseMenu/Menus/MainMenu/MarginContainer/VBoxContainer/btnOptions" to="PauseMenu" method="_on_btn_options_pressed"]
[connection signal="pressed" from="PauseMenu/Menus/MainMenu/MarginContainer/VBoxContainer/btnBackToMenu" to="PauseMenu" method="_on_btn_back_to_menu_pressed"]
